# shopping-app

./: .env  README.md  compose.yaml
frontend/: Dockerfile  next.config.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: App.tsx  BankAccount.tsx  Market.tsx  Orders.tsx  order.tsx  (+1 more)
gateway/: .gitignore  Cargo.toml  Dockerfile
gateway/src/: lib.rs  main.rs
gateway/src/api/: mod.rs  openapi.rs
gateway/src/api/orders/: config.rs  create_order.rs  get_order_status.rs  get_orders.rs  mod.rs
gateway/src/api/payments/: config.rs  create_bank_account.rs  deposit.rs  get_account_balance.rs  get_user_accounts.rs  mod.rs
gateway/src/models/: bank_account.rs  error.rs  mod.rs  order.rs  order_status.rs  order_update.rs
gateway/src/services/: gateway.rs  mod.rs
gateway/src/services/dto/: create_account_dto.rs  create_order_dto.rs  deposit_dto.rs  mod.rs  order_status_dto.rs
gateway/tests/: test.rs
orders/: .env  .gitignore  Cargo.toml  Dockerfile
payments/: Cargo.toml  Dockerfile
payments/src/: main.rs
payments/src/api/: config.rs  create_bank_account.rs  deposit.rs  get_account_balance.rs  get_user_accounts.rs  mod.rs  openapi.rs
payments/src/infrastructure/: db_repo.rs  kafka.rs
payments/src/migrations/: 0001_inbox_schema.sql  0002_bank_accs.sql  0003_outbox_schema.sql
payments/src/models/: bank_account.rs  inbox_status.rs  inbox_task.rs  mod.rs  order.rs  order_status.rs  order_update.rs  order_update_outbox.rs  outbox_status.rs
payments/src/services/: mod.rs  payments_service.rs
payments/src/services/dto/: balance_dto.rs  create_account_dto.rs  deposit_dto.rs  mod.rs
(+36 files in other folders)
