[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
utoipa = {version = "5.3.1", features=["uuid"]}
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
sqlx = { version = "0.8.5", features = ["postgres", "migrate", "runtime-tokio"] }
actix-multipart = "0.7.2"
sha2 = "0.10.9"
serde_json = "1.0.140"
dotenv = "0.15.0"
env_logger = "0.11.8"
reqwest = { version = "0.12.15", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["serde"] }
log = "0.4.27"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["serde"] }
rand = "0.9.1"
anyhow = "1.0.98"