[package]
name = "payments"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["default", "json", "multipart", "stream"] }
serde_json = "1.0.140"
actix-web = "4.10.2"
utoipa = { version = "5.3.1", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
sqlx = { version = "0.8.5", features = ["postgres", "migrate", "runtime-tokio", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["serde"] }
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
log = "0.4.27"
tokio = "1.45.1"
futures = "0.3.31"
